--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -223,6 +223,22 @@ h2 {
   }
 }
 
+.on-dark {
+  #{headings()},
+  a,
+  p,
+  ul,
+  li,
+  span,
+  .k-headline {
+    color: $true-white;
+  }
+
+  a:hover {
+    color: $primary;
+  }
+}
+
 .k-align {
   &--left {
     text-align: left;
