blog listing page

--- a/src/scss/components/_cta-banner.scss
+++ b/src/scss/components/_cta-banner.scss
@@ -47,6 +47,19 @@
   }
 }
 
+.k-cta--subscribe {
+  margin: 5em 0 8em 0;
+
+  .k-inner {
+    background: $black;
+    border-radius: .75em;
+  }
+
+  .k-cta--preheading {
+    color: $highlight;
+  }
+}
+
 @media(min-width: $bp-sm) {
   .k-ctabanner--takeover {
     .k-button {
@@ -85,6 +98,38 @@
           margin-left: .5em;
         }
       }
+    }
+  }
+
+  .k-cta--subscribe {
+    text-align: center;
+
+    .k-cta--preheading,
+    .k-headline,
+    .k-button {
+      display: block;
+      margin: auto;
+    }
+
+    .k-cta--preheading {
+      width: 100%;
+      text-align: center;
+      margin-bottom: 1em;
+    }
+
+    .k-headline {
+      margin-left: 12.5%;
+      margin-bottom: 1em;
+      max-width: 75%;
+    }
+  }
+}
+
+@media(min-width: $bp-lg) {
+  .k-cta--subscribe {
+    .k-headline {
+      margin: 0 25% 1em 25%;
+      max-width: 50%;
     }
   }
 }
