--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import 'components/site-footer';
 @import 'components/hero';
 @import 'components/hero-productlisting';
+@import 'components/hero-blogsingle';
 @import 'components/button';
 @import 'components/card-product';
 @import 'components/card-article';
