add search modal and trigger fn

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,6 +29,7 @@
 @import 'components/cart';
 @import 'components/productlisting';
 @import 'components/blog-promo';
+@import 'components/modals';
 
 @import 'pages/home';
 @import 'pages/blog-listing';
