--- a/src/scss/global/_elements.scss
+++ b/src/scss/global/_elements.scss
@@ -1,3 +1,20 @@
+#k-backdrop {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: $black;
+  z-index: -100;
+  opacity: 0;
+  transition: opacity .4s $ease-out-quart;
+  pointer-events: none;
+  user-select: none;
+
+  &.active {
+    z-index: 100;
+    opacity: .9;
+  }
+}
+
 .k-blog-breadcrumb {
   display: none; // just don't even show it on mobile
   text-align: right;
