--- a/src/scss/pages/_checkout.scss
+++ b/src/scss/pages/_checkout.scss
@@ -16,6 +16,13 @@
       background: $true-white;
       padding: 1em;
       box-shadow: 0 0 2px -1px #222;
+      margin-bottom: 2em;
+    }
+
+    input {
+      &:focus {
+        outline: none;
+      }
     }
   }
 
@@ -55,6 +62,25 @@
   }
 }
 
+.k-review-order {
+  &--titlerow {
+    display: flex;
+
+    p {
+      flex-basis: 50%;
+    }
+  }
+
+  &--item {
+    display: flex;
+
+    .product-name,
+    .product-total {
+      flex-basis: 50%;
+    }
+  }
+}
+
 @media(min-width: $bp-lg) {
   .k-checkout {
     .k-form--columns {
@@ -64,6 +90,7 @@
         padding: 4em 3em;
         float: left;
         width: 45%;
+        margin-bottom: 0;
 
         &:last-child {
           margin-left: 10%;
