--- a/src/scss/components/_card-article.scss
+++ b/src/scss/components/_card-article.scss
@@ -5,7 +5,7 @@
 
   .k-figure {
     margin-bottom: 1em;
-    border-radius: .33em;
+    border-radius: 0.33em;
     transition: box-shadow 1s $ease-out-quart;
 
     &--liner {
