--- a/src/scss/components/_cta-banner.scss
+++ b/src/scss/components/_cta-banner.scss
@@ -3,16 +3,19 @@
 
   .k-inner--xl {
     position: relative;
-    border-radius: .75em;
+    border-radius: 0.75em;
     overflow: hidden;
 
     &:before {
-      display: block; content: '';
+      display: block;
+      content: '';
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       background: $black;
-      opacity: .33;
+      opacity: 0.33;
       z-index: -1;
       pointer-events: none;
       user-select: none;
@@ -52,7 +55,7 @@
 
   .k-inner {
     background: $black;
-    border-radius: .75em;
+    border-radius: 0.75em;
   }
 
   .k-cta--preheading {
@@ -60,7 +63,7 @@
   }
 }
 
-@media(min-width: $bp-sm) {
+@media (min-width: $bp-sm) {
   .k-ctabanner--takeover {
     .k-button {
       display: block;
@@ -68,7 +71,7 @@
   }
 }
 
-@media(min-width: $bp-md) {
+@media (min-width: $bp-md) {
   .k-ctabanner {
     .k-inner--xl {
       &:before {
@@ -95,7 +98,7 @@
         margin-bottom: 0;
 
         &:last-child {
-          margin-left: .5em;
+          margin-left: 0.5em;
         }
       }
     }
@@ -125,7 +128,7 @@
   }
 }
 
-@media(min-width: $bp-lg) {
+@media (min-width: $bp-lg) {
   .k-cta--subscribe {
     .k-headline {
       margin: 0 25% 1em 25%;
@@ -134,7 +137,7 @@
   }
 }
 
-@media(min-width: $bp-xl) {
+@media (min-width: $bp-xl) {
   .k-ctabanner {
     &--takeover {
       .k-ctabanner--content {
@@ -144,7 +147,7 @@
   }
 }
 
-@media(min-width: $bp-xxl) {
+@media (min-width: $bp-xxl) {
   .k-ctabanner {
     &--takeover {
       .k-ctabanner--content {
