--- a/src/scss/components/_product-video.scss
+++ b/src/scss/components/_product-video.scss
@@ -14,10 +14,13 @@
     position: relative;
 
     &:before {
-      display: block; content: '';
+      display: block;
+      content: '';
       position: absolute;
-      top: .5em; left: 0;
-      width: 100%; height: .33em;
+      top: 0.5em;
+      left: 0;
+      width: 100%;
+      height: 0.33em;
       background: $highlight;
       transform: translateY(-50%);
     }
@@ -42,7 +45,7 @@
   }
 }
 
-@media(min-width: $bp-md) {
+@media (min-width: $bp-md) {
   .k-productvideo {
     &--title {
       margin-bottom: 4em;
@@ -71,7 +74,7 @@
   }
 }
 
-@media(min-width: $bp-lg) {
+@media (min-width: $bp-lg) {
   .k-productvideo {
     &--title {
       margin-bottom: 5em;
@@ -96,4 +99,3 @@
     }
   }
 }
-
