--- a/src/scss/global/_forms.scss
+++ b/src/scss/global/_forms.scss
@@ -26,7 +26,7 @@ form {
     border: 0;
     border-bottom: 1px solid #ddd;
     border-radius: 0;
-    padding: 1.5em 0 .5em 0;
+    padding: 1.5em 0 0.5em 0;
   }
 
   textarea {
