--- a/src/scss/pages/_blog-listing.scss
+++ b/src/scss/pages/_blog-listing.scss
@@ -9,7 +9,8 @@
 
   &--filterby {
     position: absolute;
-    top: 3em; right: 5%;
+    top: 3em;
+    right: 5%;
     text-align: right;
   }
 
@@ -33,7 +34,7 @@
   }
 }
 
-@media(min-width: $bp-md) {
+@media (min-width: $bp-md) {
   .k-bloglist {
     .k-inner {
       display: flex;
@@ -54,7 +55,7 @@
   }
 }
 
-@media(min-width: $bp-lg) {
+@media (min-width: $bp-lg) {
   .k-bloglist {
     .k-inner {
       justify-content: flex-start;
