--- a/src/scss/components/_modals.scss
+++ b/src/scss/components/_modals.scss
@@ -28,11 +28,25 @@
     }
   }
 
+  &--scrollhint {
+    position: absolute;
+    top: 50%;
+    right: -1.5em;
+    text-align: center;
+    transform: rotate(90deg) translateX(-50%);
+    display: none; // JS will display this element if there's more than 1 item in the cart
+
+    span {
+      font-size: 200%;
+      color: $highlight;
+    }
+  }
+
   &--close {
     position: absolute;
-    top: -($padding-sm);
-    right: 0;
-    color: $true-white;
+    top: 1em;
+    right: 2em;
+    color: $black;
     width: 100%;
 
     &__liner {
@@ -144,6 +158,31 @@
       transform: translateX(0);
     }
   }
+
+  &__actions {
+    position: relative;
+    padding-top: 1em;
+    text-align: right;
+
+    a {
+      display: block;
+      color: $black;
+
+      span {
+        color: $primary;
+        font-weight: 700;
+      }
+    }
+
+    .k-fade {
+      position: absolute;
+      top: -3em;
+      left: -50%;
+      width: 200%;
+      height: 3em;
+      // background: linear-gradient(to top, $true-white 5%, transparent 95%);
+    }
+  }
 }
 
 .k-ajaxcart {
@@ -153,7 +192,119 @@
   transform: translateX(-100%);
   transition: opacity 0.4s $ease-out-quart, transform 0.4s $ease-out-circ;
 
+  &::-webkit-scrollbar {
+    width: 0 !important;
+  }
+
+  &--close:hover {
+    cursor: pointer;
+  }
+
   &--content {
     height: 400px;
+
+    * {
+      margin: 0;
+    }
+  }
+
+  &--item {
+    &:last-child {
+      .k-ajaxcart--item__liner {
+        border-bottom: 0;
+      }
+    }
+
+    &__liner {
+      padding: 2em 2em 2em 0;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between;
+      border-bottom: 1px solid #ddd;
+
+      * {
+        margin-bottom: 1em;
+        pointer-events: none;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    img {
+      flex-basis: 25%;
+      max-width: 25%;
+      display: block;
+    }
+
+    h3 {
+      flex-basis: 70%;
+      text-align: right;
+    }
+
+    p {
+      flex-basis: 50%;
+    }
+
+    .k-bigtext {
+      font-size: 140%;
+      line-height: 1;
+      text-align: right;
+    }
+  }
+}
+
+@media (min-width: $bp-sm) {
+  .k-modal--cart__actions {
+    .k-fade {
+      position: absolute;
+      top: -10em;
+      height: 10em;
+    }
+  }
+
+  .k-ajaxcart {
+    &--item {
+      &__liner {
+        padding: 4em 2em 4em 0;
+        flex-flow: row nowrap;
+        align-items: center;
+
+        * {
+          margin-bottom: 0;
+        }
+      }
+
+      img {
+        flex-basis: 10%;
+        max-width: 10%;
+        margin-right: 5%;
+      }
+
+      h3 {
+        flex-basis: 25%;
+        text-align: left;
+      }
+
+      p {
+        flex-basis: 25%;
+        text-align: right;
+      }
+    }
+  }
+}
+
+@media (min-width: $bp-md) {
+  .k-modal--cart {
+    .k-modal {
+      &--content {
+        padding: 4em 3em;
+      }
+    }
+  }
+
+  .k-ajaxcart--close {
+    right: 3em;
   }
 }
